--- a/sphinx_thunlp_theme/footer.html
+++ b/sphinx_thunlp_theme/footer.html
@@ -10,17 +10,26 @@
     <div style="width: 50%; padding-left: 5rem; padding-top: 2rem; padding-bottom: 1rem;" class="footer-right">
         <p style="color: #FFFFFF; font-size: 1rem; font-family: Alibaba-PuHuiTi-Light; margin-left: 2rem; padding-top: .3rem;">Follow US</p>
         <p>
+            <!--
             <span class="contact contact-facebook">
                 <img src="{{ pathto('_static/images/facebook.svg', 1) }}" />
             </span>
+            -->
             <span class="contact contact-twitter">
-                <img src="{{ pathto('_static/images/twitter.svg', 1) }}" />
+                <a href="https://twitter.com/TsinghuaNLP" target="_blank">
+                    <img src="{{ pathto('_static/images/twitter.svg', 1) }}" />
+                </a>
             </span>
             <span class="contact contact-wechat">
                 <img src="{{ pathto('_static/images/wechat.svg', 1) }}" />
+                <span class="hover-box">
+                    <img style="width: 14rem; height: 14rem;" src="{{ pathto('_static/images/wx_qrcode.jpg', 1) }}" />
+                </span>
             </span>
             <span class="contact contact-weibo">
-                <img src="{{ pathto('_static/images/weibo.svg', 1)}}" />
+                <a href="https://weibo.com/u/7614113831" target="_blank">
+                    <img src="{{ pathto('_static/images/weibo.svg', 1)}}" />
+                </a>
             </span>
         </p>
     </div>
